Desenvolvimento da sessão de habilidades

--- a/index.html
+++ b/index.html
@@ -36,7 +36,58 @@
             <h1>Olá, meu nome é <span class="cor">Gabriel Alexandre!</span></h1>
             <p>Sou um estudante de programação e desenvolvimento Front-End fascinado por tudo que a área tem a oferecer e sempre buscando melhorar todas as minhas habilidades e conhecimentos. Estou no caminho para construir diversos projetos, para assim ganhar experiência e aperfeiçoar a criatividade na escrita dos códigos!</p>
         </section>
+
         <div class="linha-1"></div>
+
+        <section id="habilidades">
+            <div class="apresentacao-habilidades">
+                <h2>Habilidades em desenvolvimento</h2>
+                <p>Todas as habilidades que estou mantendo o foco para estudar no meu dia a dia, sempre aprendendo algo novo e incorporando as tecnologias necessárias no mercado e em minhas necessidades.</p>
+            </div>
+            
+            <ul id="lista-de-habilidades">
+                <li>
+                    <i class="fa-brands fa-html5" style="color: orange"></i>
+                    HTML5
+                </li>
+                <li>
+                    <i class="fa-brands fa-css3-alt" style="color: blue"></i>
+                CSS3
+                </li>
+                <li>
+                    <i class="fa-brands fa-sass" style="color: rgb(255, 78, 107)"></i>
+                    Sass
+                </li>
+                <li>
+                    <i class="fa-brands fa-square-js" style="color: rgb(255, 183, 0)"></i>
+                    JavaScript
+                </li>
+                <li>
+                    <i class="fa-brands fa-square-js" style="color: rgb(58, 58, 189)"></i>
+                    JQuery
+                </li>
+                <li>
+                    <i class="fa-brands fa-react" style="color: cyan"></i>
+                    React
+                </li>
+                <li>
+                    <i class="fa-solid fa-database" style="color: rgb(84, 84, 84)"></i>
+                    SQL
+                </li>
+                <li>
+                    <i class="fa-brands fa-python" style="color: rgb(157, 189, 53)"></i>
+                    Python
+                </li>
+                <li>
+                    <i class="fa-solid fa-server"></i>
+                    Back-end
+                </li>
+                <li>
+                    <i class="fa-solid fa-flag-usa" style="color: rgb(175, 15, 15)"></i>
+                    Inglês
+                </li>
+            </ul>
+        </section>
     </main>
 
     <footer>
