--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
         <div class="linha-1"></div>
 
-        <section id="habilidades">
+        <section id="habilidades" class="sessao">
             <div class="apresentacao-habilidades">
-                <h2>Habilidades em desenvolvimento</h2>
+                <h2 class="titulo">Habilidades em desenvolvimento</h2>
                 <p>Todas as habilidades que estou mantendo o foco para estudar no meu dia a dia, sempre aprendendo algo novo e incorporando as tecnologias necessárias no mercado e em minhas necessidades.</p>
             </div>
             
@@ -49,44 +49,122 @@
                 <li>
                     <i class="fa-brands fa-html5" style="color: orange"></i>
                     HTML5
+                    <p class="tempo-de-estudo">2 Anos de estudos</p>
                 </li>
                 <li>
                     <i class="fa-brands fa-css3-alt" style="color: blue"></i>
                 CSS3
+                <p class="tempo-de-estudo">2 Anos de estudos</p>
                 </li>
                 <li>
                     <i class="fa-brands fa-sass" style="color: rgb(255, 78, 107)"></i>
                     Sass
+                    <p class="tempo-de-estudo">1 Mês de estudos</p>
                 </li>
                 <li>
                     <i class="fa-brands fa-square-js" style="color: rgb(255, 183, 0)"></i>
                     JavaScript
+                    <p class="tempo-de-estudo">2 Anos de estudos</p>
                 </li>
                 <li>
                     <i class="fa-brands fa-square-js" style="color: rgb(58, 58, 189)"></i>
                     JQuery
+                    <p class="tempo-de-estudo">3 Meses de estudos</p>
                 </li>
                 <li>
                     <i class="fa-brands fa-react" style="color: cyan"></i>
                     React
+                    <p class="tempo-de-estudo">2 meses de estudos</p>
                 </li>
                 <li>
                     <i class="fa-solid fa-database" style="color: rgb(84, 84, 84)"></i>
                     SQL
+                    <p class="tempo-de-estudo">1 Mês de estudos</p>
                 </li>
                 <li>
                     <i class="fa-brands fa-python" style="color: rgb(157, 189, 53)"></i>
                     Python
+                    <p class="tempo-de-estudo">1 Ano de estudos</p>
                 </li>
                 <li>
                     <i class="fa-solid fa-server"></i>
                     Back-end
+                    <p class="tempo-de-estudo" style="font-size: .7em">Estudos recém iniciados</p>
                 </li>
                 <li>
                     <i class="fa-solid fa-flag-usa" style="color: rgb(175, 15, 15)"></i>
                     Inglês
+                    <p class="tempo-de-estudo">Intermediário</p>
                 </li>
             </ul>
+        </section>
+
+        <div class="linha-2"></div>
+
+        <section id="projetos" class="sessao">
+            <h2 class="titulo">Projetos</h2>
+            <div class="carrossel">
+                <button class="seta-anterior controle" aria-label="Projeto anterior">&lt;</button>
+                <button class="seta-posterior controle" aria-label="Projeto posterior">&gt;</button>
+                <div class="empacotador-de-elementos">
+                    <div class="galeria-de-projetos">
+                            <div class="card-de-projeto item">
+                                <a href="#">
+                                    <img src="https://source.unsplash.com/random/250x250">
+                                    <div class="descricao-card-projeto">
+                                        <h3>Projeto111</h3>
+                                        <p>Descrição do projeto</p>
+                                </a>
+                                </div>
+                            </div>
+                            <div class="card-de-projeto item">
+                                <a href="#">
+                                    <img src="https://source.unsplash.com/random/250x250">
+                                    <div class="descricao-card-projeto">
+                                        <h3>Projeto222</h3>
+                                        <p>Descrição do projeto</p>
+                                </a>
+                                </div>
+                            </div>
+                            <div class="card-de-projeto item">
+                                <a href="#">
+                                    <img src="https://source.unsplash.com/random/250x250">
+                                    <div class="descricao-card-projeto">
+                                        <h3>Projeto333</h3>
+                                        <p>Descrição do projeto</p>
+                                </a>
+                                </div>
+                            </div>
+                            <div class="card-de-projeto item">
+                                <a href="#">
+                                    <img src="https://source.unsplash.com/random/250x250">
+                                    <div class="descricao-card-projeto">
+                                        <h3>Projeto444</h3>
+                                        <p>Descrição do projeto</p>
+                                </a>
+                                </div>
+                            </div>
+                            <div class="card-de-projeto item">
+                                <a href="#">
+                                    <img src="https://source.unsplash.com/random/250x250">
+                                    <div class="descricao-card-projeto">
+                                        <h3>Projeto555</h3>
+                                        <p>Descrição do projeto</p>
+                                </a>
+                                </div>
+                            </div>
+                            <div class="card-de-projeto item">
+                                <a href="#">
+                                    <img src="https://source.unsplash.com/random/250x250">
+                                    <div class="descricao-card-projeto">
+                                        <h3>Projeto6666</h3>
+                                        <p>Descrição do projeto</p>
+                                </a>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -101,6 +179,7 @@
         </ul>
     </footer>
 </body>
-<script src="script.js"></script>
+<script src="JS/script.js"></script>
+<script src="JS/carrossel.js"></script>
 <script src="https://kit.fontawesome.com/20f4f169c1.js" crossorigin="anonymous"></script>
 </html>
