Melhorias na seção de projetos

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </ul>
         <nav>
             <ul id="menu">
-                <li><a href="#" class="link-de-navegacao">Sobre mim</a></li>
-                <li><a href="#" class="link-de-navegacao">Habilidades</a></li>
+                <li><a href="Pages/sobremim.html" class="link-de-navegacao">Sobre mim</a></li>
+                <li><a href="#habilidades" class="link-de-navegacao">Habilidades</a></li>
                 <li><a href="index.html" id="principal"><i class="fa-solid fa-house-chimney"></i></a></li>
-                <li><a href="#" class="link-de-navegacao">Projetos</a></li>
-                <li><a href="#" class="link-de-navegacao">Contato</a></li>
+                <li><a href="#projetos" class="link-de-navegacao">Projetos</a></li>
+                <li><a href="#contato" class="link-de-navegacao">Contato</a></li>
             </ul>
         </nav>
         <div id="manipulacao-de-cores">
@@ -109,57 +109,58 @@
                 <div class="empacotador-de-elementos">
                     <div class="galeria-de-projetos">
                             <div class="card-de-projeto item">
-                                <a href="#">
-                                    <img src="https://source.unsplash.com/random/250x250">
+                                    <!-- <img src="/Imagens/Contador-de-uniforme-imagem.png"> -->
                                     <div class="descricao-card-projeto">
-                                        <h3>Projeto111</h3>
-                                        <p>Descrição do projeto</p>
-                                </a>
+                                        <a href="#">
+                                            <h3>Projeto 1</h3>
+                                        </a>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem nesciunt sint nam officiis sed facere culpa tenetur dolor architecto maiores, iure ab corrupti repellat pariatur distinctio velit provident autem dicta.</p>
+                                        <p>React - Sass - </p>
                                 </div>
                             </div>
                             <div class="card-de-projeto item">
-                                <a href="#">
-                                    <img src="https://source.unsplash.com/random/250x250">
+                                    <!-- <img src="/Imagens/Logo-readme.png"> -->
                                     <div class="descricao-card-projeto">
-                                        <h3>Projeto222</h3>
-                                        <p>Descrição do projeto</p>
-                                </a>
+                                        <a href="">
+                                            <h3>Projeto222</h3>
+                                        </a>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p>
                                 </div>
                             </div>
                             <div class="card-de-projeto item">
-                                <a href="#">
-                                    <img src="https://source.unsplash.com/random/250x250">
+                                    <!-- <img src="/Imagens/Logo-readme.png"> -->
                                     <div class="descricao-card-projeto">
-                                        <h3>Projeto333</h3>
-                                        <p>Descrição do projeto</p>
-                                </a>
+                                        <a href="">
+                                            <h3>Projeto333</h3>
+                                        </a>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p>
                                 </div>
                             </div>
                             <div class="card-de-projeto item">
-                                <a href="#">
-                                    <img src="https://source.unsplash.com/random/250x250">
+                                    <!-- <img src="/Imagens/Logo-readme.png"> -->
                                     <div class="descricao-card-projeto">
-                                        <h3>Projeto444</h3>
-                                        <p>Descrição do projeto</p>
-                                </a>
+                                        <a href="">
+                                            <h3>Projeto444</h3>
+                                        </a>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p>
                                 </div>
                             </div>
                             <div class="card-de-projeto item">
-                                <a href="#">
-                                    <img src="https://source.unsplash.com/random/250x250">
+                                    <!-- <img src="/Imagens/Logo-readme.png"> -->
                                     <div class="descricao-card-projeto">
-                                        <h3>Projeto555</h3>
-                                        <p>Descrição do projeto</p>
-                                </a>
+                                        <a href="">
+                                            <h3>Projeto555</h3>
+                                        </a>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p>
                                 </div>
                             </div>
                             <div class="card-de-projeto item">
-                                <a href="#">
-                                    <img src="https://source.unsplash.com/random/250x250">
+                                    <!-- <img src="/Imagens/Logo-readme.png"> -->
                                     <div class="descricao-card-projeto">
-                                        <h3>Projeto6666</h3>
-                                        <p>Descrição do projeto</p>
-                                </a>
+                                        <a href="">
+                                            <h3>Projeto6666</h3>
+                                        </a>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p>
                                 </div>
                             </div>
                     </div>
