Ajustes finais no design

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         </ul>
         <nav>
             <ul id="menu">
-                <li><a href="Pages/sobremim.html" class="link-de-navegacao">Sobre mim</a></li>
-                <li><a href="#habilidades" class="link-de-navegacao">Habilidades</a></li>
-                <li><a href="index.html" id="principal"><i class="fa-solid fa-house-chimney"></i></a></li>
-                <li><a href="#projetos" class="link-de-navegacao">Projetos</a></li>
-                <li><a href="#contato" class="link-de-navegacao">Contato</a></li>
+                <li><a href="#sobremim" class="link-de-navegacao" title="Sobre mim">Sobre mim</a></li>
+                <li><a href="#habilidades" class="link-de-navegacao" title="Habilidades">Habilidades</a></li>
+                <li><a href="index.html" id="principal" title="Home"><i class="fa-solid fa-house-chimney"></i></a></li>
+                <li><a href="#projetos" class="link-de-navegacao" title="Projetos">Projetos</a></li>
+                <li><a href="#contato" class="link-de-navegacao" title="Contato">Contato</a></li>
             </ul>
         </nav>
         <div id="manipulacao-de-cores">
-            <a href="#" class="botao-de-cor"><i class="fa-solid fa-palette"></i></a>
-            <a href="#" class="botao-de-cor lua"><i class="fa-sharp fa-solid fa-moon"></i></a>
+            <!-- <input type="color" name="cores" id="cores" class="botao-de-cor mudar-cores"> --> 
+            <a href="#" class="botao-de-cor lua" id="tema" title="Mudar tema"><i class="fa-sharp fa-solid fa-moon"></i></a>
         </div>
     </header>
     <main>
@@ -111,59 +111,80 @@
                             <div class="card-de-projeto item">
                                     <!-- <img src="/Imagens/Contador-de-uniforme-imagem.png"> -->
                                     <div class="descricao-card-projeto">
-                                        <a href="#">
+                                      <!--   <a href="#">
                                             <h3>Projeto 1</h3>
                                         </a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem nesciunt sint nam officiis sed facere culpa tenetur dolor architecto maiores, iure ab corrupti repellat pariatur distinctio velit provident autem dicta.</p>
-                                        <p>React - Sass - </p>
+                                        <p>React - Sass - </p> -->
+                                        <p class="soon">Em breve!</p>
                                 </div>
                             </div>
                             <div class="card-de-projeto item">
                                     <!-- <img src="/Imagens/Logo-readme.png"> -->
                                     <div class="descricao-card-projeto">
-                                        <a href="">
+                                       <!--  <a href="">
                                             <h3>Projeto222</h3>
                                         </a>
-                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p> -->
+                                        <p class="soon">Em breve!</p>
                                 </div>
                             </div>
                             <div class="card-de-projeto item">
                                     <!-- <img src="/Imagens/Logo-readme.png"> -->
                                     <div class="descricao-card-projeto">
-                                        <a href="">
+                                      <!--   <a href="">
                                             <h3>Projeto333</h3>
                                         </a>
-                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p> -->
+                                        <p class="soon">Em breve!</p>
                                 </div>
                             </div>
                             <div class="card-de-projeto item">
                                     <!-- <img src="/Imagens/Logo-readme.png"> -->
                                     <div class="descricao-card-projeto">
-                                        <a href="">
+                                       <!--  <a href="">
                                             <h3>Projeto444</h3>
                                         </a>
-                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p> -->
+                                        <p class="soon">Em breve!</p>
                                 </div>
                             </div>
                             <div class="card-de-projeto item">
                                     <!-- <img src="/Imagens/Logo-readme.png"> -->
                                     <div class="descricao-card-projeto">
-                                        <a href="">
+                                       <!-- <a href="">
                                             <h3>Projeto555</h3>
                                         </a>
-                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p> -->
+                                        <p class="soon">Em breve!</p>
                                 </div>
                             </div>
                             <div class="card-de-projeto item">
                                     <!-- <img src="/Imagens/Logo-readme.png"> -->
                                     <div class="descricao-card-projeto">
-                                        <a href="">
+                                        <!-- <a href="">
                                             <h3>Projeto6666</h3>
                                         </a>
-                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p> -->
+                                        <p class="soon">Em breve!</p>
                                 </div>
                             </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="linha-1"></div>
+
+        <section id="contato" class="sessao">
+            <div class="caixa-de-contato">
+                <h2 class="titulo">Entre em contato comigo!</h2>
+                <div class="contatos">
+                    <ul>
+                        <li><i class="fa-solid fa-envelope"></i> Gabrielalexandre1337@gmail.com</li>
+                        <li><i class="fa-brands fa-linkedin"></i> https://www.linkedin.com/in/gabriel-alexandre-82355723b/</li>
+                        <li></li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -182,5 +203,6 @@
 </body>
 <script src="JS/script.js"></script>
 <script src="JS/carrossel.js"></script>
+<script src="JS/manipularCores.js"></script>
 <script src="https://kit.fontawesome.com/20f4f169c1.js" crossorigin="anonymous"></script>
 </html>
