Implementação de primeiro projeto

--- a/index.html
+++ b/index.html
@@ -111,12 +111,11 @@
                             <div class="card-de-projeto item">
                                     <!-- <img src="/Imagens/Contador-de-uniforme-imagem.png"> -->
                                     <div class="descricao-card-projeto">
-                                      <!--   <a href="#">
-                                            <h3>Projeto 1</h3>
+                                      <a href="https://github.com/Scoorpioon/Guess-the-color" target="_blank">
+                                            <h3>Guess the color</h3>
                                         </a>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem nesciunt sint nam officiis sed facere culpa tenetur dolor architecto maiores, iure ab corrupti repellat pariatur distinctio velit provident autem dicta.</p>
-                                        <p>React - Sass - </p> -->
-                                        <p class="soon">Em breve!</p>
+                                        <p>Minigame de adivinhação de cores através de códigos RGB construido sem Frameworks. Selecione a cor na paleta que você acha que seja, altere a dificuldade e as cores quando quiser!</p>
+                                        <p>HTML - CSS - JavaScript</p>
                                 </div>
                             </div>
                             <div class="card-de-projeto item">
