Implementação de projeto

--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
                             <div class="card-de-projeto item">
                                     <!-- <img src="/Imagens/Logo-readme.png"> -->
                                     <div class="descricao-card-projeto">
-                                       <!--  <a href="">
-                                            <h3>Projeto222</h3>
+                                       <a href="https://github.com/Scoorpioon/gerador-de-senha" target="_blank">
+                                            <h3>Gerador de senhas</h3>
                                         </a>
-                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p> -->
-                                        <p class="soon">Em breve!</p>
+                                        <p>App para geração de senhas complexas construido também com JavaScript puro. Gere senhas de 7 à 22 caracteres envolvendo letras maiúsculas, minúsculas e números.</p>
+                                        <p>HTML - CSS - JavaScript</p>
                                 </div>
                             </div>
                             <div class="card-de-projeto item">
