Implementação de projeto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="https://www.instagram.com/scoorpiooon_/" target="_blank" class="link-social" title="Instagram"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
         <nav>
-            <ul id="menu">
+            <ul id="menu" class="menu-mobile">
                 <li><a href="#sobremim" class="link-de-navegacao" title="Sobre mim">Sobre mim</a></li>
                 <li><a href="#habilidades" class="link-de-navegacao" title="Habilidades">Habilidades</a></li>
                 <li><a href="index.html" id="principal" title="Home"><i class="fa-solid fa-house-chimney"></i></a></li>
@@ -108,36 +108,36 @@
                 <button class="seta-posterior controle" aria-label="Projeto posterior">&gt;</button>
                 <div class="empacotador-de-elementos">
                     <div class="galeria-de-projetos">
-                            <div class="card-de-projeto item">
-                                    <!-- <img src="/Imagens/Contador-de-uniforme-imagem.png"> -->
-                                    <div class="descricao-card-projeto">
-                                      <a href="https://github.com/Scoorpioon/Guess-the-color" target="_blank">
-                                            <h3>Guess the color</h3>
-                                        </a>
-                                        <p>Minigame de adivinhação de cores através de códigos RGB construido sem Frameworks. Selecione a cor na paleta que você acha que seja, altere a dificuldade e as cores quando quiser!</p>
-                                        <p>HTML - CSS - JavaScript</p>
-                                </div>
+                        <div class="card-de-projeto item">
+                            <!-- <img src="/Imagens/Contador-de-uniforme-imagem.png"> -->
+                            <div class="descricao-card-projeto">
+                                <a href="https://github.com/Scoorpioon/Guess-the-color" target="_blank">
+                                    <h3>Guess the color</h3>
+                                </a>
+                                <p>Minigame de adivinhação de cores através de códigos RGB construido sem Frameworks. Selecione a cor na paleta que você acha que seja, altere a dificuldade e as cores quando quiser!</p>
+                                <p>HTML - CSS - JavaScript</p>
                             </div>
-                            <div class="card-de-projeto item">
-                                    <!-- <img src="/Imagens/Logo-readme.png"> -->
-                                    <div class="descricao-card-projeto">
-                                       <a href="https://github.com/Scoorpioon/gerador-de-senha" target="_blank">
-                                            <h3>Gerador de senhas</h3>
-                                        </a>
-                                        <p>App para geração de senhas complexas construido também com JavaScript puro. Gere senhas de 7 à 22 caracteres envolvendo letras maiúsculas, minúsculas e números.</p>
-                                        <p>HTML - CSS - JavaScript</p>
-                                </div>
+                        </div>
+                        <div class="card-de-projeto item">
+                            <!-- <img src="/Imagens/Logo-readme.png"> -->
+                            <div class="descricao-card-projeto">
+                                <a href="https://github.com/Scoorpioon/gerador-de-senha" target="_blank">
+                                    <h3>Gerador de senhas</h3>
+                                </a>
+                                <p>App para geração de senhas complexas construido também com JavaScript puro. Gere senhas de 7 à 22 caracteres envolvendo letras maiúsculas, minúsculas e números.</p>
+                                <p>HTML - CSS - JavaScript</p>
                             </div>
-                            <div class="card-de-projeto item">
-                                    <!-- <img src="/Imagens/Logo-readme.png"> -->
-                                    <div class="descricao-card-projeto">
-                                      <!--   <a href="">
-                                            <h3>Projeto333</h3>
-                                        </a>
-                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima odio asperiores, ipsa perspiciatis nostrum aspernatur dolorem consectetur a architecto, fuga suscipit cum quod ab, eum aliquam maiores culpa praesentium fugiat.</p> -->
-                                        <p class="soon">Em breve!</p>
-                                </div>
+                        </div>
+                        <div class="card-de-projeto item">
+                                <!-- <img src="/Imagens/Logo-readme.png"> -->
+                                <div class="descricao-card-projeto">
+                                     <a href="https://github.com/Scoorpioon/Fraudes-Skateboard-PHP">
+                                        <h3>Fraudes Skateboarding</h3>
+                                    </a>
+                                    <p>Loja de venda de skates com o design responsivo. Seu ponto principal é o sistema de login, construido utilizando PHP e MySQL.</p>
+                                    <p>HTML- CSS - PHP - JQuery</p>
                             </div>
+                        </div>
                             <div class="card-de-projeto item">
                                     <!-- <img src="/Imagens/Logo-readme.png"> -->
                                     <div class="descricao-card-projeto">
